--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,4 +13,10 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
-          build: npm run build
+          build: npm run test:addToCart
+
+      - name: Cypress Test Report
+           uses: actions/upload-artifact@v4
+           with:
+              name: MochaAwesome HTML Report
+              path: cypress/reports/html
